# rpc

./: README.md  autobuild.sh
example/callee/: CMakeLists.txt  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: mprpcchannel.h
src/: mprpcapplication.cc  mprpcchannel.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: mprpccontroller.h
